Adding rebalancing trader

--- a/traders/BUILD
+++ b/traders/BUILD
@@ -16,10 +16,12 @@ cc_library(
     name = "traders",
     srcs = [
         "limit_trader.cc",
+        "rebalancing_trader.cc",
         "stop_trader.cc",
     ],
     hdrs = [
         "limit_trader.h",
+        "rebalancing_trader.h",
         "stop_trader.h",
     ],
     deps = [
