--- a/indicators/BUILD
+++ b/indicators/BUILD
@@ -8,3 +8,12 @@ cc_library(
     hdrs = ["last_n_ohlc_ticks.h"],
     deps = ["//lib:trader_base"],
 )
+
+cc_test(
+    name = "last_n_ohlc_ticks_test",
+    srcs = ["last_n_ohlc_ticks_test.cc"],
+    deps = [
+        ":last_n_ohlc_ticks",
+        "@googletest//:gtest_main",
+    ],
+)
