--- a/indicators/BUILD
+++ b/indicators/BUILD
@@ -1,4 +1,7 @@
-package(default_visibility = ["//:__pkg__"])
+package(default_visibility = [
+    "//:__pkg__",
+    "//traders:__pkg__",
+])
 
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
