Moving ExecuteOrder to TraderAccount

--- a/lib/BUILD
+++ b/lib/BUILD
@@ -17,22 +17,6 @@ cc_proto_library(
 )
 
 cc_library(
-    name = "trader_account",
-    srcs = ["trader_account.cc"],
-    hdrs = ["trader_account.h"],
-    deps = [":trader_cc_proto"],
-)
-
-cc_test(
-    name = "trader_account_test",
-    srcs = ["trader_account_test.cc"],
-    deps = [
-        ":trader_account",
-        "@googletest//:gtest_main",
-    ],
-)
-
-cc_library(
     name = "trader_base",
     hdrs = ["trader_base.h"],
     deps = [":trader_cc_proto"],
@@ -43,6 +27,22 @@ cc_test(
     srcs = ["trader_base_test.cc"],
     deps = [
         ":trader_base",
+        "@googletest//:gtest_main",
+    ],
+)
+
+cc_library(
+    name = "trader_account",
+    srcs = ["trader_account.cc"],
+    hdrs = ["trader_account.h"],
+    deps = [":trader_base"],
+)
+
+cc_test(
+    name = "trader_account_test",
+    srcs = ["trader_account_test.cc"],
+    deps = [
+        ":trader_account",
         "@googletest//:gtest_main",
     ],
 )
