--- a/lib/BUILD
+++ b/lib/BUILD
@@ -1,6 +1,7 @@
 package(default_visibility = [
     "//:__pkg__",
     "//indicators:__pkg__",
+    "//logging:__pkg__",
     "//traders:__pkg__",
 ])
 
@@ -76,6 +77,7 @@ cc_library(
     deps = [
         ":trader_account",
         ":trader_interface",
+        "//logging:logger_interface",
         "//util:util_time",
     ],
 )
@@ -85,6 +87,7 @@ cc_test(
     srcs = ["trader_eval_test.cc"],
     deps = [
         ":trader_eval",
+        "//logging:csv_logger",
         "//util:util_time",
         "@googletest//:gtest_main",
     ],
