--- a/logging/BUILD
+++ b/logging/BUILD
@@ -6,11 +6,11 @@ package(default_visibility = [
 load("@rules_proto//proto:defs.bzl", "proto_library")
 
 cc_library(
-    name = "logger_interface",
-    hdrs = ["logger_interface.h"],
+    name = "logger",
+    hdrs = ["logger.h"],
     deps = [
-        "//lib:trader_account",
-        "//lib:trader_base",
+        "//base",
+        "//base:account",
     ],
 )
 
@@ -18,5 +18,5 @@ cc_library(
     name = "csv_logger",
     srcs = ["csv_logger.cc"],
     hdrs = ["csv_logger.h"],
-    deps = [":logger_interface"],
+    deps = [":logger"],
 )
