--- a/util/BUILD
+++ b/util/BUILD
@@ -13,33 +13,33 @@ cc_proto_library(
 )
 
 cc_library(
-    name = "util_time",
-    srcs = ["util_time.cc"],
-    hdrs = ["util_time.h"],
+    name = "time",
+    srcs = ["time.cc"],
+    hdrs = ["time.h"],
 )
 
 cc_test(
-    name = "util_time_test",
-    srcs = ["util_time_test.cc"],
+    name = "time_test",
+    srcs = ["time_test.cc"],
     deps = [
-        ":util_time",
+        ":time",
         "@googletest//:gtest_main",
     ],
 )
 
 cc_library(
-    name = "util_proto",
-    srcs = ["util_proto.cc"],
-    hdrs = ["util_proto.h"],
+    name = "proto",
+    srcs = ["proto.cc"],
+    hdrs = ["proto.h"],
     deps = ["@com_google_protobuf//:protobuf_lite"],
 )
 
 cc_test(
-    name = "util_proto_test",
-    srcs = ["util_proto_test.cc"],
+    name = "proto_test",
+    srcs = ["proto_test.cc"],
     deps = [
         ":example_cc_proto",
-        ":util_proto",
+        ":proto",
         "@googletest//:gtest_main",
     ],
 )
