Adding optional side input to evals

--- a/eval/BUILD
+++ b/eval/BUILD
@@ -21,6 +21,7 @@ cc_library(
         ":eval_cc_proto",
         "//base",
         "//base:account",
+        "//base:side_input",
         "//base:trader",
         "//indicators:volatility",
         "//logging:logger",
