--- a/logging/BUILD
+++ b/logging/BUILD
@@ -26,6 +26,6 @@ cc_test(
     srcs = ["csv_logger_test.cc"],
     deps = [
         ":csv_logger",
-        "@googletest//:gtest_main",
+        "@com_google_googletest//:gtest_main",
     ],
 )
