Using absl::Time and absl::StatusOr

--- a/util/BUILD
+++ b/util/BUILD
@@ -16,6 +16,11 @@ cc_library(
     name = "time",
     srcs = ["time.cc"],
     hdrs = ["time.h"],
+    deps = [
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/time",
+    ],
 )
 
 cc_test(
@@ -30,7 +35,12 @@ cc_test(
 cc_library(
     name = "proto",
     hdrs = ["proto.h"],
-    deps = ["@com_google_protobuf//:protobuf_lite"],
+    deps = [
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/status:statusor",
+        "@com_google_absl//absl/strings",
+        "@com_google_protobuf//:protobuf_lite",
+    ],
 )
 
 cc_test(
