--- a/eval/BUILD
+++ b/eval/BUILD
@@ -37,5 +37,8 @@ cc_test(
         "//logging:csv_logger",
         "//util:time",
         "@com_google_googletest//:gtest_main",
+        "@com_google_absl//absl/memory",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
     ],
 )
